deploy/crashdragon-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crashdragon
spec:
  selector:
    app: crashdragon
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
