deploy/crashdragon-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crashdragon-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.global-static-ip-name: crashdragonip
spec:
  tls:
  - hosts:
    - crashdragon.density.one
    secretName: crashdragon-tls
  rules:
  - host: crashdragon.density.one
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: crashdragon
            port:
              number: 80
